# FundAlg2semMAI

./: CMakeLists.txt  list_memory.cpp  list_memory.h  logger_builder.h  logger_builder_concrete.cpp  logger_concrete.cpp  logger_holder.cpp  logger_holder.h  main.cpp  memory.cpp  memory.h  memory_mihuil.cpp  memory_mihuil.h  not_implemented.h  operation_not_supported.h  typename_holder.h
Parse/: file_reader.h  parse.h
alloc_border/: boundary_tags_allocator.cpp  boundary_tags_allocator.h  main_cpp.txt
alloc_buddies/: budy_system.cpp  budy_system.h
alloc_list/: list_memory.cpp  list_memory.h
alloc_new_delete/: memory_holder.h  memory_mihuil.cpp  memory_mihuil.h
allocator_names/: allocator_type.h
avl_tree/: avl_tree.h  main.cpp
b_plus_tree/: associative_container.h  bplus_tree.h  bplustreeindian.cpp  search_tree.h
binary_search_tree/: binary_search_tree.h  binary_search_tree_2.h
command/: command.h  command_add_collection.h  command_add_data.h  command_add_pool.h  command_add_scheme.h  command_get_data.h  command_get_data_between.h  command_remove_collection.h  command_remove_data.h  command_remove_pool.h  command_remove_scheme.h  command_update.h
comparers/: int_comparer.h  std_pair_comparer.h  stdstring_comparer.h
database/: keycomparer.h
handler/: abstract_handler.h  request_handler_with_command.h  request_handler_with_command_chain.h
kursach_puk_puk/: binary_search_tree.h  collection.h  data_collection.h  database.h  database_singleton.h  definition_of_delivery.h  file_parcer.h  logger_singleton.h  main.cpp  scheme.h  trees_names.h
logger/: logger.cpp  logger.h  logger_builder.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h
memory_allocation_mods/: memory_with_fit_allocation.h
splay_tree/: splay_tree.h
string_pool/: string_pool.h
test_dbase_singleton_command/: avl.h  bst.h  data_collection.h  pool.h  scheme.h  test_dbase_singleton.h
